--- a/.dev/sass/layouts/_hero.scss
+++ b/.dev/sass/layouts/_hero.scss
@@ -1,6 +1,5 @@
 .hero {
 	color: $background-color;
-	margin-top: -100px;
 	min-height: 300px;
 	width: 100%;
 	padding-top: 100px;
